Updated UI and working security